Core: fixed line-height with icon misalignment issue for Firefox

--- a/www/views/Extjs3/themes/Paper/src/_utils.scss
+++ b/www/views/Extjs3/themes/Paper/src/_utils.scss
@@ -29,5 +29,5 @@
 	text-rendering: optimizeLegibility; // Support for Safari and Chrome.
 	-moz-osx-font-smoothing: grayscale; // Support for Firefox.
 	font-feature-settings: 'liga'; // Support for IE
-	line-height: normal;
+	line-height: 1;
 }
